--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,14 +1,30 @@
-name: Build and Deploy to EC2on:
+name: Build and Deploy to EC2
+
+on:
   push:
     branches:
-     - main  # or your default branchjobs:
+     - main  # or your default branch
+  
+
+
+jobs:
   build-and-deploy:
-    runs-on: self-hosted    steps:
+    runs-on: self-hosted
+
+   
+     
+    steps:
     - name: Checkout repository
-      uses: actions/checkout@v2    - name: Build and tag Docker image
+      uses: actions/checkout@v2
+
+  
+    - name: Build and tag Docker image
       run: |
         sudo -S docker build -t mywebsite08 .
-        sudo -S docker save mywebsite08:latest | gzip > mywebsite08.tar.gz    - name: Transfer Docker image to EC2
+        sudo -S docker save mywebsite08:latest | gzip > mywebsite08.tar.gz
+   
+
+    - name: Transfer Docker image to EC2
       env:
         SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
         HOST: ${{ secrets.HOST }}
@@ -17,8 +33,12 @@ name: Build and Deploy to EC2on:
         mkdir -p ~/.ssh
         echo "$SSH_PRIVATE_KEY" | tr -d '\r' > ~/.ssh/id_rsa
         chmod 600 ~/.ssh/id_rsa
-        ssh-keyscan -H "$HOST" >> ~/.ssh/known_hosts        # Transfer image using scp
-        scp -i ~/.ssh/id_rsa -P 22 mywebsite08.tar.gz ubuntu@$HOST:/tmp    - name: Deploy to EC2
+        ssh-keyscan -H "$HOST" >> ~/.ssh/known_hosts
+        
+        # Transfer image using scp
+        scp -i ~/.ssh/id_rsa -P 22 mywebsite08.tar.gz ubuntu@$HOST:/tmp
+
+    - name: Deploy to EC2
       env:
         SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
         HOST: ${{ secrets.HOST }}
@@ -27,7 +47,9 @@ name: Build and Deploy to EC2on:
         mkdir -p ~/.ssh
         echo "$SSH_PRIVATE_KEY" | tr -d '\r' > ~/.ssh/id_rsa
         chmod 600 ~/.ssh/id_rsa
-        ssh-keyscan -H "$HOST" >> ~/.ssh/known_hosts        # SSH and Docker commands to run on EC2
+        ssh-keyscan -H "$HOST" >> ~/.ssh/known_hosts
+
+        # SSH and Docker commands to run on EC2
         ssh -i ~/.ssh/id_rsa ubuntu@$HOST '
           sudo -S docker load < /tmp/mywebsite08.tar.gz
           sudo -S docker stop mywebsite08 || true
